--- a/index.html
+++ b/index.html
@@ -1,97 +1,152 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <title>
         Scrollytelling feature
     </title>
-    <meta charset="utf-8" />
-    <meta name = "description" content = "Meteorites by Malika Buribayeva" />
-    <meta name = "viewport" content = "width=device-width, initial-scale=1" />
+    <meta charset="utf-8"/>
+    <meta name="description" content="Meteorites by Malika Buribayeva"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/style.css"/>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital@1&display=swap" rel="stylesheet">
 
     <script src='https://api.mapbox.com/mapbox-gl-js/v2.14.1/mapbox-gl.js'></script>
-    <link href='https://api.mapbox.com/mapbox-gl-js/v2.14.1/mapbox-gl.css' rel='stylesheet' />
-  </head>
+    <link href='https://api.mapbox.com/mapbox-gl-js/v2.14.1/mapbox-gl.css' rel='stylesheet'/>
+    <link href="./assets/slider/itc-slider.css" rel="stylesheet">
+    <script src="./assets/slider/itc-slider.js" defer></script>
+</head>
 
-  <body class = "scrolly-body">
+<body class="scrolly-body">
 
-    <main>
+<main>
 
-      <section id="intro">
+    <section id="intro">
         <div class="content">
-          <h1>Meteorites 2000-2013</h1>
-          <p>Scroll down to see the map</p>
+            <h1>Meteorites 2000-2013</h1>
+            <p>Scroll down to see the map</p>
         </div>
-      </section>
+    </section>
 
-      <section id="scrolly">
+    <section id="scrolly">
         <figure>
-          <!--<p class="ind">0</p>-->
-  
-          <div id="masthead">
-            <h3>Meteorites map</h3>
-          </div>
-          <div id="map"></div>
+            <!--<p class="ind">0</p>-->
+
+            <div id="masthead">
+                <h3>Meteorites map</h3>
+            </div>
+            <div id="map"></div>
         </figure>
 
-      <section id="outro">
+        <article id="article_container"></article>
+    </section>
+    >
+    <section id="outro"></section>
 
-      </section>
+</main>
 
-    </main>
+<script src="https://unpkg.com/d3@5.9.1/dist/d3.min.js"></script>
+<script src="https://unpkg.com/scrollama"></script>
 
-	  <script src="https://unpkg.com/d3@5.9.1/dist/d3.min.js"></script>
-	  <script src="https://unpkg.com/scrollama"></script>
+<script>
+    function addImageItem(imageSrc) {
+        var div = document.createElement('div');
+        div.className = 'itc-slider-item'
+        var imageDiv = document.createElement('img');
+        imageDiv.src = imageSrc;
+        div.appendChild(imageDiv)
+        return div;
+    }
 
-    <script>
-        async function loadData() {
-            const response = await fetch('data/data.geojson', {
+    function addImageContainer(images, id) {
+
+        let div = document.createElement('div')
+        div.className = 'itc-slider'
+        div.setAttribute('data-slider', 'itc-slider' + id);
+        div.setAttribute('data-loop', 'true');
+        div.setAttribute('data-autoplay', 'true');
+        div.setAttribute('data-interval', '10000');
+
+        let divWrapper = document.createElement('div');
+        divWrapper.className = 'itc-slider-wrapper';
+
+        let divItems = document.createElement('div')
+        divItems.className = 'itc-slider-items'
+
+        for (let i = 0; i < images.length; i++) {
+            divItems.appendChild(images[i]);
+        }
+        divWrapper.appendChild(divItems);
+        div.appendChild(divWrapper);
+
+        let prevBtn = document.createElement('div');
+        prevBtn.className = 'itc-slider-btn itc-slider-btn-prev'
+        let nextBtn = document.createElement('div');
+        prevBtn.className = 'itc-slider-btn itc-slider-btn-next'
+
+        div.appendChild(prevBtn);
+        div.appendChild(nextBtn)
+
+        return div;
+    }
+
+
+    async function loadData() {
+        const response = await fetch('data/data.geojson', {
             method: 'GET'
-          });
+        });
 
-            const data = await response.json();
+        const data = await response.json();
 
-            mapboxgl.accessToken = 'pk.eyJ1IjoibWFiYzI2IiwiYSI6ImNsbm0xdTc5NTI0ZHcya3F4dTVidTYzbXMifQ.oXETk1_q_xB3pE4oEBtk1g';
-            const map = new mapboxgl.Map({
+        mapboxgl.accessToken = 'pk.eyJ1IjoibWFiYzI2IiwiYSI6ImNsbm0xdTc5NTI0ZHcya3F4dTVidTYzbXMifQ.oXETk1_q_xB3pE4oEBtk1g';
+        const map = new mapboxgl.Map({
             container: 'map', // container ID
             style: 'mapbox://styles/mabc26/clod8dxek000701p84nnmg12v', // style URL
-            center: [-134.20, 59.70], // starting position [lng, lat]
-            zoom: 16, // starting zoom
+            center: [70, 42], // starting position [lng, lat]
+            zoom: 3, // starting zoom
             bearing: 27,
             pitch: 45
-          });
+        });
 
-          map.on('load', () => {
-            map.addSource('data', {
-            type: 'geojson',
-            data: data
+        map.on('load', () => {
+            // Load an image from an external URL
+            map.loadImage('images/meteorite.png', (error, image) => {
+                if (error) throw error;
+
+                // Add the image to the map style
+                map.addImage('meteorite-icon', image);
+
+                // Add a GeoJSON source with your data
+                map.addSource('data', {
+                    type: 'geojson',
+                    data: data
+                });
+
+                // Add a layer to use the image to represent the data
+                map.addLayer({
+                    'id': 'meteorites',
+                    'type': 'symbol',
+                    'source': 'data',
+                    'layout': {
+                        'icon-image': 'meteorite-icon', // reference the image
+                        'icon-size': 0.01 // adjust the size as needed
+                    }
+                });
             });
-            
-            map.addLayer({
-            'id': 'data',
-            'type': 'circle',
-            'source': 'data',
-            //this is for the map marker
-            'paint': {
-            'circle-radius': 3,
-            'circle-stroke-width': 1,
-            'circle-color': 'black',
-            'circle-stroke-color': 'black'
-            }
-            });
-          });
+        });
 
-          map.scrollZoom.disable();
 
-            for (const item in data.features) {
+        map.scrollZoom.disable();
+
+        for (const item in data.features) {
+
+            map.zoomTo(7);
 
             //console.log(`${data}: ${data.features[item].id}`);
-              const p = data.features[item];
+            const p = data.features[item];
 
             let div = document.createElement('div');
             div.setAttribute("class", "step");
@@ -102,48 +157,72 @@
             //var pid = item
 
             // header
-            if(p.properties.name) {
-              var header = document.createElement("h2");
-              //var node = document.createTextNode("Step "+pid);
-              var node = document.createTextNode(p.properties.name);
-              header.appendChild(node);
-              div.appendChild(header);
+            if (p.properties.name) {
+                var header = document.createElement("h2");
+                //var node = document.createTextNode("Step "+pid);
+                var node = document.createTextNode(p.properties.name);
+                header.appendChild(node);
+                div.appendChild(header);
             }
 
-            // image
-            if(p.properties.image) {
-              var img = document.createElement("img");
-              img.src = p.properties.image;
-              div.appendChild(img);
+            //year
+            if (p.properties.year) {
+                var dateStr = p.properties.year; // Assuming 'year' is the field with the date string
+                var date = new Date(dateStr);
+                var options = {year: 'numeric', month: 'long', day: 'numeric'};
+                var fallDateText = `Fall date: ${date.toLocaleDateString('en-US', options)}`;
+
+                var fallDateDiv = document.createElement("div");
+                fallDateDiv.className = "fall-date";
+                fallDateDiv.textContent = fallDateText;
+                div.appendChild(fallDateDiv); // append right below the header
             }
 
+            // Assuming 'p' is the current feature from the GeoJSON data iteration
+            var imageContainer = document.createElement("div");
+
+            let images = []
+            if (p.properties.image && p.properties.fall_image) {
+                images.push(addImageItem(p.properties.image));
+                imageContainer.appendChild(addImageItem(p.properties.image));
+
+                images.push(addImageItem(p.properties.fall_image));
+
+
+                let randomImageId = 'id__' + Math.random() * 1000
+                div.appendChild(addImageContainer(images, randomImageId));
+            } else if (p.properties.image) {
+                var img = document.createElement("img");
+                img.src = p.properties.image;
+                div.appendChild(img);
+            }
+            
             // description
-            if(p.properties.description) {
-              var description = document.createElement("div");
-              description.id = 'description_'+p.id;
-              description.className = "description";
-              description.innerHTML = p.properties.description;
-              div.appendChild(description);
+            if (p.properties.description) {
+                var description = document.createElement("div");
+                description.id = 'description_' + p.id;
+                description.className = "description";
+                description.innerHTML = p.properties.description;
+                div.appendChild(description);
             }
+
 
             document.getElementById("article_container").appendChild(div);
 
-          }
+        }
 
-            //console.log(data.features);
+        // using d3 for convenience
+        var main = d3.select("main");
+        var scrolly = main.select("#scrolly");
+        var figure = scrolly.select("figure");
+        var article = scrolly.select("article");
+        var step = article.selectAll(".step");
 
-            // using d3 for convenience
-          var main = d3.select("main");
-          var scrolly = main.select("#scrolly");
-          var figure = scrolly.select("figure");
-          var article = scrolly.select("article");
-          var step = article.selectAll(".step");
+        // initialize the scrollama
+        var scroller = scrollama();
 
-          // initialize the scrollama
-          var scroller = scrollama();
-
-          // generic window resize listener event
-          function handleResize() {
+        // generic window resize listener event
+        function handleResize() {
             // 1. update height of step elements
             var stepH = Math.floor(window.innerHeight * 0.75);
             step.style("height", stepH + "px");
@@ -152,37 +231,37 @@
             var figureMarginTop = (window.innerHeight - figureHeight) / 2;
 
             figure
-              .style("height", figureHeight + "px")
-              .style("top", figureMarginTop + "px");
+                .style("height", figureHeight + "px")
+                .style("top", figureMarginTop + "px");
 
             // 3. tell scrollama to update new element dimensions
             scroller.resize();
-          }
+        }
 
-          // scrollama event handlers
-          function handleStepEnter(response) {
+        // scrollama event handlers
+        function handleStepEnter(response) {
             console.log(response);
             //response = { element, direction, index }
 
             //console.log(response.element.dataset.long)
 
             map.flyTo({
-              center: [response.element.dataset.long, response.element.dataset.lat],
-              essential: true, // this animation is considered essential with respect to prefers-reduced-motion
-              offset: [50, 0]
+                center: [response.element.dataset.long, response.element.dataset.lat],
+                essential: true, // this animation is considered essential with respect to prefers-reduced-motion
+                //offset: [50, 0]
             });
 
             // add color to current step only
             step.classed("is-active", function (d, i) {
-              return i === response.index;
+                return i === response.index;
             });
 
             // update graphic based on step
-            figure.select("p.ind").text(response.index);
-          }
+            // figure.select("p.ind").text(response.index);
+        }
 
 
-          function init() {
+        function init() {
 
 
             // 1. force a resize on load to ensure proper dimensions are sent to scrollama
@@ -192,21 +271,31 @@
             // 		this will also initialize trigger observations
             // 3. bind scrollama event handlers (this can be chained like below)
             scroller
-              .setup({
-                step: "#scrolly article .step",
-                offset: 0.33,
-                debug: false
-              })
-              .onStepEnter(handleStepEnter);
-          }
+                .setup({
+                    step: "#scrolly article .step",
+                    offset: 0.33,
+                    debug: false
+                })
+                .onStepEnter(handleStepEnter);
+        }
 
-          // kick things off
-          init();
+        // kick things off
+        init();
+        document.querySelectorAll('.itc-slider').forEach((el) => {
+            ItcSlider.getOrCreateInstance(el, {
+                autoplay: true,
+                loop: true, 
+                swipe: true,
+                interval: 2000
+            });
+        });
+        ItcSlider.getOrCreateInstance('.itc-slider');
+    }
 
-          }
+    window.onload = function () {
+        loadData();
+    }
 
-          loadData();
-
-    </script>
-  </body>
+</script>
+</body>
 </html>
